implemented role precedence middleware
